# coffeecutie-meta

./: README.md
android/: CMakeLists.txt  android_preload_temp.cmake.in
instrumentation/appimage-cross/: CMakeLists.txt
instrumentation/assimp-cross/: CMakeLists.txt
instrumentation/bullet-cross/: CMakeLists.txt
instrumentation/docker-toolchain/: Dockerfile
instrumentation/openal-cross/: CMakeLists.txt
instrumentation/openssl/: compile-android.sh  compile-ios.sh
instrumentation/sdl2-cross/: SDL2-build.sh
ubuntu/: CMakeLists.txt  snapcraft.yaml.in
